refactoring controllers, jpenapi file
